# project_smartport

./: .gitignore
src/smartport_bringup/: CMakeLists.txt  package.xml
src/smartport_bringup/launch/: sim_copy_truck_empty.launch.py  sim_heavy_truck.launch.py  sim_rtg.launch.py  sim_truck.launch.py  sim_truck_physics.launch.py
src/smartport_control_lower/: CMakeLists.txt  package.xml
src/smartport_control_lower/src/: ackermann_bridge.cpp
src/smartport_description/: CMakeLists.txt  package.xml
src/smartport_description/model/: RTG_Crane.urdf  copy_truck.urdf  tractor.urdf
src/smartport_description/model/containers/: container_blue.urdf  container_brown.urdf  container_green.urdf  container_grey.urdf  container_red.urdf
src/smartport_description/scripts/: generate_world.py
src/smartport_description/worlds/: empty.sdf  port.sdf
src/smartport_gazebo_plugins/: CMakeLists.txt  package.xml
src/smartport_gazebo_plugins/src/: PacejkaPlugin.cc
src/smartport_interfaces/: CMakeLists.txt  package.xml
src/smartport_interfaces/msg/: ActuatorState.msg  VehicleCommand.msg  VehicleState.msg
src/smartport_rtgcontroller/: CMakeLists.txt  package.xml
src/smartport_rtgcontroller/src/: rtg_controller_node.cpp
src/smartport_truckcontroller/: CMakeLists.txt  package.xml
src/smartport_truckcontroller/include/smartport_truckcontroller/: ackermann.hpp
src/smartport_truckcontroller/scripts/: keyboard_steer.py  teleop_truck.py
src/smartport_truckcontroller/src/: ackermann_controller_node.cpp  steering_controller_node.cpp  vehicle_state_node.cpp  wheel_state_node.cpp
