<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartport_control_lower</name>
  <version>0.0.1</version>
  <description>Lower-level vehicle specific plant mapping and actuator simulation</description>
  <maintainer email="rama@todo.todo">Rama Fitriansyah</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>smartport_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
