<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartport_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic plugins for the Smartport simulation</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gz-sim8</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-math7</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
